<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_new"
        android:title="@string/text_navigation_home" />

    <item
        android:id="@+id/navigation_orders"
        android:icon="@drawable/ic_orders"
        android:title="@string/text_navigation_order"
        android:visible="true" />


    <item
        android:id="@+id/navigation_menu"
        android:icon="@drawable/ic_menu"
        android:title="@string/text_navigation_menu"
        android:visible="true" />



    <item
        android:id="@+id/navigation_merchant"
        android:icon="@drawable/ic_merchant"
        android:title="@string/text_navigation_merchant"
        android:visible="true" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/text_navigation_profile" />

</menu>